# digital-town-hall

./: .env.example  .gitignore  api.py  main.py  pyproject.toml  test_session_history.db
core/: chatkit_server.py  context.py  database.py  main.py  memory_store.py  models.py  sqlalchemy_store.py
docs/: agent-as-tool.md  anonymous-chat-persistence.md  backend-integration-to-front-end.md  circular-imports.md  conversation-history-management.md  function-tool-deep-dive.md  handoffs-behind-the-scenes.md  hooks-vs-nested-runs.md  sqlalchemy-guide.md
tests/: conftest.py
tests/integration/: test_incident_happy_path.py
tests/integration/scripts/: incident_happy_path.md
tests/models/: evaluation_models.py
town_hall_agents/: __init__.py  conversation_format_coordinator_agent.py  conversation_formatter_agent.py  conversation_summarizer_agent.py  dialogue_agent.py  feedback_formatter_agent.py  hooks.py  incident_agent.py  incident_formatter_agent.py  insights_agent.py  triage_agent.py
