[project]
name = "digital-town-hall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents[sqlalchemy]>=0.7.0",
    "aiosqlite>=0.20.0", # Async SQLite driver (for local dev)
    "asyncpg>=0.30.0", # Async PostgreSQL driver (for Supabase)
    "greenlet>=3.3.1",
    "psycopg2>=2.9.11",
]
